<resources>
    <string name="app_name">app de sobrecalentamiento de pc</string>
    <string name="iniciarsesion">iniciarSesion</string>
    <string name="iniciarsesion_1">iniciarSesion</string>
    <string name="iniciar_sesion_1">iniciar sesion</string>
    <string name="has_olvidado_tu_contrase_a">has_olvidado_tu_contrase_a</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="has_olvidado_tu_contrase_aq">has olvidado tu contraseña</string>
    <string name="has_olvidado_tu_contrase">has olvidado tu contrase?</string>
    <string name="has_olvidado_tu_contraseña_">has olvidado tu contraseña?</string>
    <string name="ventiladores">ventiladores</string>
    <string name="cpu">CPU</string>
    <string name="control_de_ventilador">Control de Ventilador</string>
    <string name="estado_apagado">Estado: Apagado</string>
    <string name="encender">Encender</string>
    <string name="velocidad">Velocidad</string>
    <string name="velocidad_0">Velocidad: 0</string>
    <string name="iniciar">Iniciar</string>
    <string name="detener">Detener</string>
    <string name="estado_inactivo">Estado: Inactivo</string>
    <string name="temperatura_0_c">Temperatura: 0°C</string>
    <string name="velocidad_1">Velocidad: 0%</string>
    <string name="control_de_cpu">Control de CPU</string>
    <string name="regresar">Regresar</string>
    <string name="agregar_datos">agregar_datos</string>
    <string name="datos">datos</string>
    <string name="volver">volver</string>
    <string name="actualizar_cpu">Actualizar CPU</string>
    <string name="agregar_cpu">Agregar CPU</string>
    <string name="estado">Estado</string>
    <string name="velocidad01">Velocidad</string>
    <string name="temperatura_c">Temperatura (°C)</string>
    <string name="eliminar_cpu">Eliminar_cpu</string>
    <string name="Eliminar_CPU">Eliminar_CPU</string>
    <string name="agregar_CPU">agregar_CPU</string>
    <string name="actualizar_CPU">Actualizar_CPU</string>
    <string name="no_te_has_registrado_registrate">no te has registrado? registrate</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="registrar_nuevo_usuario">Registrar usuario</string>
    <string name="agregar_nuevos_datos">agregar datos</string>
    <string name="temperatura_actual">temperatura actual</string>
    <string name="velocidad_actual">velocidad actual</string>
    <string name="estado_actual">estado actual</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="ver_los_datos">Ver los datos</string>
    <string name="datos_">DATOS</string>
    <string name="temperatura">Temperatura</string>
    <string name="listado_de_datos">Listado de datos</string>
</resources>