<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sdsd"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/control_de_cpu"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estado_inactivo"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperatura_0_c"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/velocidad_1"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnDetener"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detener"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnAgregarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datos"
        android:textColor="@color/white"
        android:layout_marginTop="2dp"/>

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regresar"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
</LinearLayout>
