<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/temperatura_c"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextVelocidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/velocidad01"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estado" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_CPU" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_CPU" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Eliminar_CPU" />
    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
