<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@drawable/backgrun"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciarsesion"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="40sp" />

<EditText
    android:id="@+id/etEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginTop="40dp"
    android:background="@color/blue_2"
    android:hint="@string/username"
    android:textSize="30sp">
</EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:background="@color/blue_2"
        android:hint="@string/password"
        android:textSize="30sp">
    </EditText>

    <Button
        android:id="@+id/btnIniciarSesion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="40dp"
    android:text="@string/iniciar_sesion_1"
    android:textAllCaps="true" />

    <TextView
        android:id="@+id/tvRegistrarse"
        android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:text="@string/no_te_has_registrado_registrate"
    android:textColor="@color/blue_3"
    android:textSize="15sp" />
</LinearLayout>
